--- a/index.html
+++ b/index.html
@@ -3,11 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mediaqueries.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    
 </head>
 <body>
+    <header>
+        <a href="#" class = logo>Kartik Pal</a>
+
+        <nav>
+            <a href="#" class="active">Home</a>
+            <a href="#" class="active">Skill</a>
+            <a href="#" class="active">Projects</a>
+            <a href="#" class="active">Contact</a>
+        </nav>
+    </header>
+    <section class="home">
+        <div class="home-img">
+            <img src="/assets/main.jpg"alt="">
+        </div>
+        <div class="home-content">
+            <h1>Hi,Its <span>Kartik </span></h1>
+            <h3 class ="typing-text">I,m a <span></span></h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis consequuntur ut voluptate neque veritatis, alias, distinctio autem accusantium repellendus fugit corporis aperiam ex nobis quis esse officia!</p>
+            <div class="social-icons">
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+
+            </div>
+            <a href="#" class="btn">"Hire me"</a>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
