landing page css and html done

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 <body>
     <header>
-        <a href="#" class = logo>Kartik Pal</a>
+        <a href="#" class = logo>SHIZUKA Minamoto</a>
 
         <nav>
             <a href="#" class="active">Home</a>
+            <a href="#" class="active">About</a>
             <a href="#" class="active">Skill</a>
             <a href="#" class="active">Projects</a>
             <a href="#" class="active">Contact</a>
@@ -21,15 +22,15 @@
     </header>
     <section class="home">
         <div class="home-img">
-            <img src="/assets/main.jpg"alt="">
+            <img src="/assets/main.jpg" alt="">
         </div>
         <div class="home-content">
-            <h1>Hi,Its <span>Kartik </span></h1>
+            <h1>Hi,Its <span>Shizuka </span></h1>
             <h3 class ="typing-text">I,m a <span></span></h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis consequuntur ut voluptate neque veritatis, alias, distinctio autem accusantium repellendus fugit corporis aperiam ex nobis quis esse officia!</p>
             <div class="social-icons">
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/KartikPal26"><i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
 
