finalized the front page

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
         var typed = new Typed(".auto-type",{
-            strings: ["Android Developer","Web Developer","UI/UX Designer","Flutter Developer","Content Creator","Developer","Open Source Contributer"],
-            typeSpeed: 165,
-            backSpeed: 175,
+            strings: ["Android Developer","Web Developer","UI/UX Designer","Tech Enthusiast","Flutter Developer","Content Creator","Developer","Open Source Contributor"],
+            typeSpeed: 40,
+            backSpeed: 15,
             loop: true
         })
     </script>
