--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     <section class="home">
         <div class="home-img">
-            <img src="/assets/3f17e80e-1991-4f76-b7b2-46aa22b6870f-transformed-removebg-preview.png" alt="">
+            <img src="/assets/3f17e80e-1991-4f76-b7b2-46aa22b6870f-transformed-removebg-preview.webp" alt="">
         </div>
         <div class="home-content">
             <h1>Hi,Its <span >Kartik Pal </span></h1>
