--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a href="https://www.instagram.com/kartikpal/"><i class="fa-brands fa-instagram"></i></a>
 
             </div>
-            <a href="#" class="btn">"Hire me"</a>
+            <a href="#" class="btn">"About Me"</a>
         </div>
     </section>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
